# bibliography_connector

./: .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml  zotero_items.json
bibliography_connector/: cli.py  pipeline.py
bibliography_connector/cli/: cmd_sync.py  main.py
bibliography_connector/exporters/: hugo.py
bibliography_connector/providers/: zotero.py
bibliography_connector/tests/: test_zotero.py
bibliography_connector/transforms/: clean.py  remdup.py
bibliography_connector/utils/: __init__.py  date_parser.py
src/bibliography_connector/: cli.py  main.py
src/bibliography_connector/commands/: get_item.py
