[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliography_connector"
version = "0.1.0"
dependencies = [
    "typer[all]",
    "rich",
    "httpx",
    "pyyaml"
]

[project.scripts]
bibliography_connector = "bibliography_connector.cli:app"